--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,4 +14,5 @@ $container-max-widths: (
 
 @import "./components/mixin";
 @import "./components/header";
+@import "./components/footer";
 @import "./components/homepage";
