--- a/src/scss/components/_homepage.scss
+++ b/src/scss/components/_homepage.scss
@@ -254,6 +254,17 @@
         width: 100%;
       }
     }
+
+    &__btns {
+      display: flex;
+      justify-content: flex-end;
+      margin-top: 55px;
+
+      button {
+        background-color: transparent;
+        border-color: $elephant;
+      }
+    }
   }
 
   .carousel-item {
@@ -300,26 +311,9 @@
   .carousel-inner {
     overflow: visible;
   }
-
-  .carousel-control-prev,
-  .carousel-control-next {
-    align-items: flex-end;
-    justify-content: flex-end;
-    width: 92.5%;
-    opacity: 1;
-    bottom: -93px;
-
-    @media only screen and (max-width: 1200px) {
-      width: 92.6%;
-    }
-
-    @media only screen and (max-width: 991px) {
-      width: 90%;
-    }
-
-    span {
-      border: 1px solid $elephant;
-    }
+    
+  .carousel-control-prev {
+    right: 70px;
   }
 
   .carousel-control-prev-icon,
