started page development

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,3 +16,4 @@ $container-max-widths: (
 @import "./components/header";
 @import "./components/footer";
 @import "./components/homepage";
+@import "./components/futNfue";
