--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -19,3 +19,16 @@
     font-family: "Audrey";
     src: url('/assets/fonts/Audrey-Normal.woff') format("woff");
 }
+
+$xs-devices: 576px;
+$small-devices: 767px;
+$medium-devices: 991px;
+$large-devices: 1200px;
+$extra-large: 1200px; 
+$custom-size: 1290px;
+
+$xs: 576px;
+$sm: 767px;
+$md: 991px;
+$lg: 1200px;
+$xl: 1400px;
