--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,28 +1,43 @@
 header {
-    .navbar-brand {
-        margin-right: 7px;
-    } 
+    z-index: 999;
+}
 
-    .brand-text {
-        font-size: 16px;
-        line-height: 19px;
-    }
-    
-    .nav-item {
-        font-size: 14px;
-        line-height: 16px;
-        color: $elephant;
-        padding: 5px 0 5px 45px;
+.header-sticky {
+    background-color: white;
+    box-shadow: rgb(208, 208, 208) 0px 0px 15px 0px;
+}
 
-        @include media-breakpoint-between(lg, xl) {
-            padding: 5px 0 5px 20px;
-        }
-    }
+.navbar-brand {
+    margin-right: 7px;
+} 
 
-    .navbar-nav {
-        @include media-breakpoint-between(xs, lg) {
-            background: white;
-            @include box-shadow(0px 0px 4px 0px #eee);
-        }
+.brand-text {
+    font-size: 16px;
+    line-height: 19px;
+}
+
+.nav-item {
+    font-size: 14px;
+    line-height: 16px;
+    color: $elephant;
+    padding: 5px 0 5px 53px;
+
+    @media only screen and (max-width: $xl) {
+        padding: 5px 0 5px 28px;
     }
+}
+
+.navbar-nav {
+    @media only screen and (max-width: $md) {
+        background: #fff;
+        box-shadow: 0px 0px 14px 0px #eee;
+        padding: 10px 0;
+    }
+}
+
+.navbar-light .navbar-nav .nav-link {
+    padding: .5rem 0;
+    position: relative;
+
+    @extend .link-hover-top;
 }
