--- a/src/scss/components/_mixin.scss
+++ b/src/scss/components/_mixin.scss
@@ -1,56 +1,56 @@
 @mixin keyframes($animation-name) {
-    @-webkit-keyframes #{$animation-name} {
-        @content;
-    }
-    @-moz-keyframes #{$animation-name} {
-        @content;
-    }  
-    @-ms-keyframes #{$animation-name} {
-        @content;
-    }
-    @-o-keyframes #{$animation-name} {
-        @content;
-    }  
-    @keyframes #{$animation-name} {
-        @content;
-    }
+  @-webkit-keyframes #{$animation-name} {
+    @content;
+  }
+  @-moz-keyframes #{$animation-name} {
+    @content;
+  }
+  @-ms-keyframes #{$animation-name} {
+    @content;
+  }
+  @-o-keyframes #{$animation-name} {
+    @content;
+  }
+  @keyframes #{$animation-name} {
+    @content;
+  }
 }
 @mixin animation($str) {
   -webkit-animation: #{$str};
   -moz-animation: #{$str};
   -ms-animation: #{$str};
   -o-animation: #{$str};
-  animation: #{$str};      
+  animation: #{$str};
 }
 
-@mixin transition($element, $duration, $easing){
-    -webkit-transition: $element, $duration, $easing;
-        -moz-transition: $element, $duration, $easing;
-            -ms-transition: $element, $duration, $easing;
-                -o-transition: $element, $duration, $easing;
-                    transition: $element, $duration, $easing;
+@mixin transition($transition...) {
+  -webkit-transition: $transition;
+  -moz-transition: $transition;
+  -ms-transition: $transition;
+  -o-transition: $transition;
+  transition: $transition;
 }
 
 @mixin box-shadow($shadow...) {
-    -webkit-box-shadow: $shadow;
-       -moz-box-shadow: $shadow;       
-            -ms-box-shadow: $shadow;       
-                -o-box-shadow: $shadow;       
-                    box-shadow: $shadow;
+  -webkit-box-shadow: $shadow;
+  -moz-box-shadow: $shadow;
+  -ms-box-shadow: $shadow;
+  -o-box-shadow: $shadow;
+  box-shadow: $shadow;
 }
 
-@mixin radial-gradient($gradient...)  {
-    -webkit-background: radial-gradient($gradient);
-       -moz-background: radial-gradient($gradient);       
-            -ms-background: radial-gradient($gradient);       
-                -o-background: radial-gradient($gradient);       
-                    background: radial-gradient($gradient);
+@mixin radial-gradient($gradient...) {
+  -webkit-background: radial-gradient($gradient);
+  -moz-background: radial-gradient($gradient);
+  -ms-background: radial-gradient($gradient);
+  -o-background: radial-gradient($gradient);
+  background: radial-gradient($gradient);
 }
 
-@mixin linear-gradient($gradient...)  {
-    -webkit-background: linear-gradient($gradient);
-       -moz-background: linear-gradient($gradient);       
-            -ms-background: linear-gradient($gradient);       
-                -o-background: linear-gradient($gradient);       
-                    background: linear-gradient($gradient);
+@mixin linear-gradient($gradient...) {
+  -webkit-background: linear-gradient($gradient);
+  -moz-background: linear-gradient($gradient);
+  -ms-background: linear-gradient($gradient);
+  -o-background: linear-gradient($gradient);
+  background: linear-gradient($gradient);
 }
