Deleted dist folder

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -110,8 +110,10 @@ a:hover {
   color: #0C3046;
 }
 
-.link-hover-top::before, .navbar-light .navbar-nav .nav-link::before,
-.link-hover-bottom::before {
+.link-hover-top::before,
+.link-hover-bottom::before,
+.categories__inner a::before,
+.navbar-light .navbar-nav .nav-link::before {
   content: "";
   position: absolute;
   width: 0;
@@ -119,17 +121,19 @@ a:hover {
   background: #0e3751;
   transition: all 0.5s ease;
 }
-.link-hover-top:hover::before, .navbar-light .navbar-nav .nav-link:hover::before,
-.link-hover-bottom:hover::before {
+.link-hover-top:hover::before,
+.link-hover-bottom:hover::before,
+.categories__inner a:hover::before,
+.navbar-light .navbar-nav .nav-link:hover::before {
   width: 100%;
   transition: all 0.5s ease;
 }
 
-.link-hover-top::before, .navbar-light .navbar-nav .nav-link::before {
+.link-hover-top::before {
   top: 0;
 }
 
-.link-hover-bottom::before {
+.link-hover-bottom::before, .categories__inner a::before, .navbar-light .navbar-nav .nav-link::before {
   bottom: 0;
 }
 
@@ -586,6 +590,7 @@ header {
   font-size: 20px;
   line-height: 30px;
   text-decoration: none;
+  position: relative;
 }
 
 .slides {
