--- a/src/scss/components/_homepage.scss
+++ b/src/scss/components/_homepage.scss
@@ -224,6 +224,9 @@
     font-size: 20px;
     line-height: 30px;
     text-decoration: none;
+    position: relative;
+
+    @extend .link-hover-bottom;
   }
 }
 
